<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toobar"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/vector"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="18dp"
            android:padding="18dp"
            android:src="@drawable/b7__burger" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="18dp"
            android:text="@string/preencha_os_campos_para_criar_o_seu_cadastro"
            android:textAlignment="center"
            android:textFontWeight="400"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/line_3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="18dp"
            android:background="@color/iputsColor"
            android:hint="@string/digite_seu_nome"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textColorHint="@color/iputsNameColor" />


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="18dp"
            android:background="@color/iputsColor"
            android:hint="@string/digite_seu_e_mail"
            android:inputType="textWebEmailAddress"
            android:padding="18dp"
            android:textColorHint="@color/iputsNameColor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="18dp"
            android:background="@color/iputsColor"
            android:hint="@string/digite_sua_senha"
            android:inputType=""
            android:padding="18dp"
            android:textColorHint="@color/iputsNameColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/border_ra"
            android:text="@string/cadastrar"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/j_tem_cadastro_fazer_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_ra"
            android:paddingTop="16dp"
            android:text="Login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>