<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaDeCadastro">





        <ImageView
            android:id="@+id/b7_img"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="18dp"
            android:padding="18dp"
            android:src="@drawable/b7__burger" />

        <TextView
            android:id="@+id/titile_cadast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="18dp"
            android:text="@string/preencha_os_campos_para_criar_o_seu_cadastro"
            android:textAlignment="center"
            android:textFontWeight="400"
            android:textSize="18dp"
            android:layout_below="@+id/b7_img"
            />

        <ImageView
            android:id="@+id/img_liner"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/line_3"
            android:layout_below="@id/titile_cadast"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_name_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_liner"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/iputsColor"
            android:hint="@string/digite_seu_nome"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textColorHint="@color/iputsNameColor" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_name_cadastro"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/iputsColor"
            android:hint="@string/digite_seu_e_mail"
            android:inputType="textWebEmailAddress"
            android:padding="18dp"
            android:textColorHint="@color/iputsNameColor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_password_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_email_cadastro"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/iputsColor"
            android:hint="@string/digite_sua_senha"
            android:inputType=""
            android:padding="18dp"
            android:textColorHint="@color/iputsNameColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_password_cadastro"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/border"
            android:text="@string/cadastrar"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_pergut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/j_tem_cadastro_fazer_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="16dp"
            android:layout_below="@+id/btn_cadastrar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:paddingTop="16dp"
            android:text="Login"
            android:layout_below="@+id/text_pergut"/>


</RelativeLayout>