<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">




    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seja_bem_vindo"
        android:textAlignment="textStart"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="33dp"

        />

    <TextView
        android:id="@+id/subtitiler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/o_que_deseja_pra_hoje"
        android:textAlignment="textStart"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/titulo"

        />

    <EditText
        android:id="@+id/btnpesquisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitiler"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_radius"
        android:layout_marginBottom="16dp"
        android:hint="@string/digite_o_nome_do_burger"
        android:textAlignment="center"
        android:textColorHint="@color/iputsNameColor" />

    <ImageView
        android:id="@+id/banerArea"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/card_color"
        android:src="@drawable/banner"
        android:layout_below="@+id/btnpesquisa"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recyle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/banerArea"
        />

</RelativeLayout>