<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_Burg_Home"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:src="@drawable/burger" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Text_Homer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/o_hamburguer_mais_delicioso_da_sua_cidade"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:lineHeight="36dp"
            android:fontFamily="@font/arsenal"
            android:textAlignment="center"

            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subTextHomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logou_pediu_chegou"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:lineHeight="40dp"
            android:fontFamily="@font/arsenal"
            android:textAlignment="center"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border"
            />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>